--- a/cv.tex
+++ b/cv.tex
@@ -118,7 +118,14 @@
 % \raisebox{-0.00\height}\faLinkedin\ username \ | \ \raisebox{-0.05\height}\faGlobe \ mysite.com  & \hfill \emoji{calling} number
 % \end{tabularx}
 
-\input{header.tex}
+\begin{tabularx}{\linewidth}{@{} C @{}}
+\Huge{zhuwenq} \\[7.5pt]
+\href{https://github.com/leonezz}{\raisebox{-0.05\height}\faGithub\ Leonezz} \ $|$ \  
+\href{https://zhuwenq-blog.netlify.app}{\raisebox{-0.05\height}\faGlobe \ Blog} \ $|$ \ 
+\href{mailto:zhuwenqa@outlook.com}{\raisebox{-0.05\height}\faEnvelope \ zhuwenqa@outlook.com} \ $|$ \ 
+\href{tel:+8618551713651}{\raisebox{-0.05\height}\faMobile \ +86 18551713651} \ $|$ \
+\raisebox{-0.05\height}\faUserCircle \ Software Engineer \\
+\end{tabularx}
 
 %----------------------------------------------------------------------------------------
 % EXPERIENCE SECTIONS
@@ -126,12 +133,9 @@
 
 %Interests/ Keywords/ Summary
 \section{Summary}
-I am currently a postgraduate major in computer science, my research interests include Natural Language Processing,
-Parameter Efficient Transfer Learning and Information Extraction.
-Before my postgraduate's study, I graduated from the optical major.
+I am currently a postgraduate major in computer science, my research interests include Natural Language Processing, Parameter Efficient Transfer Learning and Information Extraction. Before my postgraduate's study, I graduate from the optical major of physics faculty.
 
-In addition to my academic study, I am a person of wide interests,
-my interests include modern C++, embedded systems, advanced deep learning technics, reading books, photography and making coffee.
+In addition to my academic study, I am a person of wide interests, my interests include modern C++, embedded systems, advanced deep learning technics, reading books, photography and making coffee.
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
@@ -148,13 +152,13 @@ my interests include modern C++, embedded systems, advanced deep learning techni
 \section{Project Experience}
 
 \begin{tabularx}{\linewidth}{ @{}X@{}  }
-\textbf{A Measuring System of Metal Surface Flatness Based on Electromagnetic Induction Principle} (Embedded System) as \textit{Creator and maintainer}.
+\textbf{A Measuring System of Metal Surface Flatness Based on Electromagnetic Induction Principle} as \textit{Creator and maintainer}.
 \signed{Sept. 2018 - Nov. 2018}\\[3.75pt]
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
         \item[-] This project is supported by the NUAA Innovation and Entrepreneurship Program.
-        \item[-] We designed a tiny electromagnetic sensor in this project, this sensor is powered with a dedicated chip.
-        \item[-] The sensor collects the electromagnetic impedance value between the sensor and the surface of the object
+        \item[-] We designed a tiny PCB coil in this project as the electromagnetic sensor and power this sensor with a dedicated chip.
+        \item[-] The dedicated chip collect the electromagnetic impedance value between the coil sensor and the surface of the object
         to be tested, and encode the value into digital data.
         \item[-] We collect the data that represents the impedance (i.e. the distance between sensor and the surface to be tested)
         with various distances, and then fit the impedance-distance value pairs with the well-known Least Square Estimation Algorithm
@@ -165,7 +169,7 @@ my interests include modern C++, embedded systems, advanced deep learning techni
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}X@{} }
-    \href{https://github.com/leonezz/OpenChart.git}{\textbf{OpenChart}} (Desktop Software) as \textit{Creator and maintainer}.
+    \href{https://github.com/leonezz/OpenChart.git}{\textbf{OpenChart}} as \textit{Creator and maintainer}.
     \signed{Jun. 2019 - Dec. 2019} \\[3.75pt]
     \begin{minipage}[t]{\linewidth}
         \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
@@ -252,7 +256,7 @@ my interests include modern C++, embedded systems, advanced deep learning techni
 \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
     \item[-] Modern C++, Python, Qt, and embedded systems.
     \item[-] Deep learning and NLP, transformer models especially.
-    \item[-] Master the theoretical basis of computer science, the underlying principles of computers and a good foundation of algorithms and data structures.
+    \item[-] Theoretical basis of computer science, including operating system, networking, the underlying principles of computers and a good foundation of algorithms and data structures.
     \item[-] Possess good documentation and engineering practice habits, and are willing to cooperate, communicate and discuss with others.
 \end{itemize}
 \end{minipage}
