--- a/cv-one-page.tex
+++ b/cv-one-page.tex
@@ -119,7 +119,14 @@
 % \raisebox{-0.00\height}\faLinkedin\ username \ | \ \raisebox{-0.05\height}\faGlobe \ mysite.com  & \hfill \emoji{calling} number
 % \end{tabularx}
 
-\input{header.tex}
+\begin{tabularx}{\linewidth}{@{} C @{}}
+\Huge{zhuwenq} \\[7.5pt]
+\href{https://github.com/leonezz}{\raisebox{-0.05\height}\faGithub\ Leonezz} \ $|$ \  
+\href{https://zhuwenq-blog.netlify.app}{\raisebox{-0.05\height}\faGlobe \ Blog} \ $|$ \ 
+\href{mailto:zhuwenqa@outlook.com}{\raisebox{-0.05\height}\faEnvelope \ zhuwenqa@outlook.com} \ $|$ \ 
+\href{tel:+8618551713651}{\raisebox{-0.05\height}\faMobile \ +86 18551713651} \ $|$ \
+\raisebox{-0.05\height}\faUserCircle \ 软件开发工程师 \\
+\end{tabularx}
 
 %----------------------------------------------------------------------------------------
 % EXPERIENCE SECTIONS
@@ -140,7 +147,7 @@
 \textbf{南京航空航天大学}, 光电信息科学与工程, \textit{工学学士}. \signed{2017 - 2021} \\
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[-] 获国家励志奖学金(2020), 优秀学生奖学金(2020), 学业奖学金(2018, 2019, 2020).
+        \item[-] 获国家励志奖学金(2020), 优秀学生奖学金(2020)，学业奖学金(2018，2019，2020).
         \item[-] 主持和参与省级科创项目两项, 校级科创项目一项. 获省级竞赛二等奖一项, 三等奖一项, 国家级竞赛三等奖一项. 获得南京航空航天大学 2021 届"学术专长"类推免资格.
     \end{itemize}
 \end{minipage}\\
@@ -150,19 +157,19 @@
 \section{项目经历}
 
 \begin{tabularx}{\linewidth}{ @{}X@{}  }
-\textbf{基于电磁感应原理的金属表面平整度检测系统} (嵌入式系统), \textit{项目负责人}.
+\textbf{基于电磁感应原理的金属表面平整度检测系统}, \textit{项目负责人}.
 \signed{2018.9 - 2018.11}\\[3.75pt]
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[-] 项目中, 我们设计了一种微小尺度的电磁传感器, 并且使用专用 IC 驱动该传感器.
-        \item[-] 该传感器采集电磁线圈与被测金属表面之间的电磁阻抗强度(传感器和被测金属表面之间的距离).
+        \item[-] 项目中, 我们设计了一种微小尺度的 PCB 线圈作为电磁传感器, 并且使用专用 IC 驱动该传感器.
+        \item[-] 我们使用专用 IC 采集电磁线圈与被测金属表面之间的电磁阻抗强度, 并将其编码为数字信号.
         \item[-] 为实现自动扫描, 我们搭建了一个步进电机驱动的二维运动平台, 使用 G-code 实现对其的控制.
     \end{itemize}
 \end{minipage}
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}X@{} }
-    \href{https://github.com/leonezz/OpenChart.git}{\textbf{OpenChart}} (桌面软件), \textit{项目负责人}.
+    \href{https://github.com/leonezz/OpenChart.git}{\textbf{OpenChart}}, \textit{项目负责人}.
     \signed{2019.6 - 2019.12} \\[3.75pt]
     \begin{minipage}[t]{\linewidth}
         \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
@@ -174,7 +181,7 @@
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}X@{} }
-    \textbf{用于智能垃圾桶的嵌入式系统} (嵌入式系统), \textit{项目负责人}.
+    \textbf{用于智能垃圾桶的嵌入式系统}, \textit{项目负责人}.
     \signed{2020.12 - 2021.5} \\[3.75pt]
     \begin{minipage}[t]{\linewidth}
         \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
@@ -209,7 +216,7 @@
         \item[-] 熟悉 C++11, C++14, C++17 等现代 C++，具有 Qt 等 C++ 框架和嵌入式系统的开发经验.
         \item[-] 对深度学习以及自然语言处理有研究和开发经验, 熟练掌握 Python 编程语言和常用框架与工具.
         \item[-] 具备良好的代码风格, 注重代码质量，热衷提高代码的健壮性和可读性, 乐于与人合作交流和讨论.
-        \item[-] 掌握计算机理论基础, 计算机底层原理和良好的算法与数据结构基础.
+        \item[-] 掌握计算机理论基础, 包括操作系统, 网络等计算机底层原理和良好的算法与数据结构基础.
     \end{itemize}
 \end{minipage}
 \end{tabularx}
